--- a/Rewind.html
+++ b/Rewind.html
@@ -38,12 +38,10 @@
             margin-top: 25px;
             display: flex;
             justify-content: center;
-            gap: 20px;
-            flex-wrap: wrap;
         }
 
         .project-button {
-            padding: 15px 20px;
+            padding: 15px 25px;
             border: 2px solid #00ff00;
             color: #00ff00;
             text-decoration: none;
@@ -51,6 +49,7 @@
             background: rgba(0, 0, 0, 0.6);
             transition: background 0.3s, transform 0.2s;
             font-weight: bold;
+            font-size: 1.2em;
         }
 
         .project-button:hover {
@@ -73,33 +72,33 @@
         <!-- Présentation générale -->
         <p>
             <strong>MKWii Retro Rewind</strong> est un mod inédit qui remet au goût du jour Mario Kart Wii.  
-            Ce projet vise à offrir une expérience nostalgique tout en intégrant des fonctionnalités modernes,  
-            des circuits rétro et des options inédites.  
-            Plongez dans des courses endiablées avec une performance améliorée et un contenu repensé.  
+            Ce projet offre une expérience nostalgique en réintroduisant des circuits rétro, des visuels améliorés  
+            et une compatibilité optimisée pour les émulateurs modernes.  
+            Préparez-vous à déraper sur des pistes légendaires et à redécouvrir les sensations d'antan.  
         </p>
 
         <!-- Instructions d'installation -->
         <p>
             <strong>Installation :</strong>  
-            1. Téléchargez la ROM et le launcher à l'aide des liens ci-dessous.  
-            2. Extrayez les fichiers téléchargés dans un dossier dédié.  
-            3. Lancez Dolphin Emulator et chargez la ROM.  
-            4. Ouvrez le launcher WeelWizard pour accéder aux circuits rétro.  
+            1. Cliquez sur le bouton ci-dessous pour accéder aux fichiers nécessaires (ROM et launcher).  
+            2. Téléchargez et extrayez les fichiers sur votre ordinateur.  
+            3. Ouvrez Dolphin Emulator et chargez la ROM fournie.  
+            4. Lancez WeelWizard pour accéder aux circuits rétro.  
         </p>
 
         <!-- Informations complémentaires -->
         <p>
             <strong>Note :</strong>  
-            Ce mod nécessite Dolphin Emulator pour fonctionner.  
-            Assurez-vous d'utiliser la dernière version stable pour une compatibilité optimale.  
-            Bonne chance sur les circuits rétro ! 
+            - Assurez-vous d'utiliser la dernière version de Dolphin pour une expérience optimale.  
+            - Ce mod fonctionne uniquement avec la version PAL de Mario Kart Wii.  
+            - Un tutoriel vidéo d'installation est disponible dans le Drive si besoin.  
         </p>
 
-        <!-- Liens de téléchargement -->
+        <!-- Lien unique vers Google Drive -->
         <div class="download-buttons">
-            <a href="downloads/Mario Kart Wii (USA) (En,Fr,Es).rvz" class="project-button" download>Télécharger la ROM</a>
-            <a href="downloads/WheelWizard.exe" class="project-button" download>Télécharger le Launcher</a>
-            <a href="https://fr.dolphin-emu.org/" class="project-button" target="_blank">Accéder à Dolphin</a>
+            <a href="https://drive.google.com/drive/folders/TON_LIEN_ICI" class="project-button" target="_blank">
+                📁 Télécharger ROM & Launcher
+            </a>
         </div>
     </div>
 
