--- a/Rewind.html
+++ b/Rewind.html
@@ -96,8 +96,8 @@
 
         <!-- Lien unique vers Google Drive -->
         <div class="download-buttons">
-            <a href="https://drive.google.com/drive/folders/TON_LIEN_ICI" class="project-button" target="_blank">
-                📁 Télécharger ROM & Launcher
+            <a href="https://drive.google.com/file/d/1C9Y-6-vo1rvDQhxQ0kFZtojZTDVyDmbo/view?usp=drive_link" class="project-button" target="_blank">
+                Télécharger ROM & Launcher
             </a>
         </div>
     </div>
