--- a/Rewind.html
+++ b/Rewind.html
@@ -96,7 +96,7 @@
 
         <!-- Lien unique vers Google Drive -->
         <div class="download-buttons">
-            <a href="https://drive.google.com/file/d/1C9Y-6-vo1rvDQhxQ0kFZtojZTDVyDmbo/view?usp=drive_link" class="project-button" target="_blank">
+            <a href="https://drive.google.com/drive/folders/1IujqXHsW2vLQkizMW6ZZH657Lg717mpk?usp=sharing" class="project-button" target="_blank">
                 Télécharger ROM & Launcher
             </a>
         </div>
