--- a/Rewind.html
+++ b/Rewind.html
@@ -38,10 +38,12 @@
             margin-top: 25px;
             display: flex;
             justify-content: center;
+            gap: 20px;
+            flex-wrap: wrap;
         }
 
         .project-button {
-            padding: 15px 25px;
+            padding: 15px 20px;
             border: 2px solid #00ff00;
             color: #00ff00;
             text-decoration: none;
@@ -49,7 +51,7 @@
             background: rgba(0, 0, 0, 0.6);
             transition: background 0.3s, transform 0.2s;
             font-weight: bold;
-            font-size: 1.2em;
+            font-size: 1.1em;
         }
 
         .project-button:hover {
@@ -71,34 +73,33 @@
 
         <!-- Présentation générale -->
         <p>
-            <strong>MKWii Retro Rewind</strong> est un mod inédit qui remet au goût du jour Mario Kart Wii.  
-            Ce projet offre une expérience nostalgique en réintroduisant des circuits rétro, des visuels améliorés  
-            et une compatibilité optimisée pour les émulateurs modernes.  
-            Préparez-vous à déraper sur des pistes légendaires et à redécouvrir les sensations d'antan.  
+            <strong>MKWii Retro Rewind</strong> est un mod inédit qui modernise Mario Kart Wii.  
+            Redécouvrez des circuits rétro emblématiques, des textures améliorées et des fonctionnalités supplémentaires.  
+            Cette version est optimisée pour Dolphin Emulator et compatible avec la version PAL du jeu.  
         </p>
 
         <!-- Instructions d'installation -->
         <p>
             <strong>Installation :</strong>  
-            1. Cliquez sur le bouton ci-dessous pour accéder aux fichiers nécessaires (ROM et launcher).  
-            2. Téléchargez et extrayez les fichiers sur votre ordinateur.  
-            3. Ouvrez Dolphin Emulator et chargez la ROM fournie.  
-            4. Lancez WeelWizard pour accéder aux circuits rétro.  
+            1. Téléchargez la ROM et le launcher via les liens ci-dessous.  
+            2. Extrayez les fichiers dans un dossier dédié.  
+            3. Lancez Dolphin Emulator et chargez la ROM.  
+            4. Ouvrez le launcher WeelWizard pour accéder aux circuits rétro.  
         </p>
 
         <!-- Informations complémentaires -->
         <p>
-            <strong>Note :</strong>  
-            - Assurez-vous d'utiliser la dernière version de Dolphin pour une expérience optimale.  
-            - Ce mod fonctionne uniquement avec la version PAL de Mario Kart Wii.  
-            - Un tutoriel vidéo d'installation est disponible dans le Drive si besoin.  
+            <strong>Recommandations :</strong>  
+            - Utilisez Dolphin Emulator dans sa dernière version.  
+            - Vérifiez que votre PC dispose de suffisamment de ressources pour une expérience fluide.  
+            - La ROM fournie est strictement destinée aux propriétaires d'un exemplaire original de Mario Kart Wii.  
         </p>
 
-        <!-- Lien unique vers Google Drive -->
+        <!-- Liens de téléchargement -->
         <div class="download-buttons">
-            <a href="https://drive.google.com/drive/folders/1IujqXHsW2vLQkizMW6ZZH657Lg717mpk?usp=sharing" class="project-button" target="_blank">
-                Télécharger ROM & Launcher
-            </a>
+            <a href="https://drive.google.com/file/d/1C9Y-6-vo1rvDQhxQ0kFZtojZTDVyDmbo/view?usp=sharing" class="project-button" target="_blank">Télécharger la ROM</a>
+            <a href="https://drive.google.com/file/d/10viN2No4zy07W3OXmrUypalkYjgidIjq/view?usp=sharing" class="project-button" target="_blank">Télécharger le Launcher</a>
+            <a href="https://fr.dolphin-emu.org/" class="project-button" target="_blank">Accéder à Dolphin</a>
         </div>
     </div>
 
