--- a/Rewind.html
+++ b/Rewind.html
@@ -93,6 +93,13 @@
     <a href="index.html" class="back-button">Retour</a>
 
     <div class="project-content">
+        <div class="window-header">
+            <div class="mac-buttons">
+                <span class="green"></span>
+                <span class="green"></span>
+                <span class="green"></span>
+            </div>
+        </div>
         <h1>MKWii Retro Rewind</h1>
 
         <!-- Présentation générale -->
