--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                         <span class="green"></span>
                     </div>
                 </div>            
-                <h2>Retro Rewind</h2>
-                <a href="Rewind.html" class="project-button">Voir le projet</a>
+                <h2>Comment Installer</h2>
+                <a href="Install.html" class="project-button">Install Now</a>
             </div>
             <div class="project" id="project2">
                 <div class="window-header">
@@ -32,8 +32,8 @@
                         <span class="green"></span>
                     </div>
                 </div>
-                <h2>Projet 2</h2>
-                <a href="projet2.html" class="project-button">Voir le projet</a>
+                <h2>Format</h2>
+                <a href="format.html" class="project-button">Voir le projet</a>
             </div>
             <div class="project" id="project3">
                 <div class="window-header">
