--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </div>
                 </div>
                 <h2>Format</h2>
-                <a href="format.html" class="project-button">Voir le projet</a>
+                <a href="format.html" class="project-button">Voir les formats</a>
             </div>
             <div class="project" id="project3">
                 <div class="window-header">
