--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+
+    <!-- Bouton Soumettre un résultat toujours visible -->
+    <a href="submit.html" class="submit-button">Soumettre un résultat</a>
+
     <!-- Contenu principal -->
-    <div id="main-content" class="hidden">
+    <div id="main-content">
 
         <canvas id="matrixCanvas"></canvas>
         <canvas id="spiderCanvas"></canvas>
 
         <!-- Conteneur des projets -->
         <div id="projects-container">
+            <!-- Fenêtre 1 -->
             <div class="project active" id="project1">
                 <div class="window-header">
                     <div class="mac-buttons">
@@ -26,6 +31,7 @@
                 <a href="Install.html" class="project-button">Install Now</a>
             </div>
 
+            <!-- Fenêtre 2 -->
             <div class="project" id="project2">
                 <div class="window-header">
                     <div class="mac-buttons">
@@ -37,6 +43,7 @@
                 <a href="format.html" class="project-button">Voir les formats</a>
             </div>
 
+            <!-- Fenêtre 3 -->
             <div class="project" id="project3">
                 <div class="window-header">
                     <div class="mac-buttons">
@@ -45,41 +52,7 @@
                     </div>
                 </div>
                 <h2>Projet 3</h2>
-                <a href="lien-projet-3.html" class="project-button">Voir le projet</a>
-            </div>
-
-            <!-- Fenêtre 4 : Créer un compte -->
-            <div class="project" id="project4">
-                <div class="window-header">
-                    <div class="mac-buttons">
-                        <span class="green"></span>
-                        <span class="green"></span>
-                    </div>
-                </div>
-                <h2>Créer un compte</h2>
-                <form id="register-form" class="auth-form">
-                    <input type="text" id="register-username" placeholder="Nom d'utilisateur" required>
-                    <input type="password" id="register-password" placeholder="Mot de passe" required>
-                    <button type="submit" class="project-button">Créer le compte</button>
-                </form>
-                <p id="register-status"></p>
-            </div>
-
-            <!-- Fenêtre 5 : Connexion -->
-            <div class="project" id="project5">
-                <div class="window-header">
-                    <div class="mac-buttons">
-                        <span class="green"></span>
-                        <span class="green"></span>
-                    </div>
-                </div>
-                <h2>Se connecter</h2>
-                <form id="login-form" class="auth-form">
-                    <input type="text" id="login-username" placeholder="Nom d'utilisateur" required>
-                    <input type="password" id="login-password" placeholder="Mot de passe" required>
-                    <button type="submit" class="project-button">Se connecter</button>
-                </form>
-                <p id="login-status"></p>
+                <a href="resultat.html" class="project-button">Voir le projet</a>
             </div>
         </div>
 
