--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
 </head>
 <body>
 
-    <!-- Bouton Soumettre un résultat toujours visible -->
-    <a href="submit.html" class="submit-button">Soumettre un résultat</a>
-
     <!-- Contenu principal -->
     <div id="main-content">
 
@@ -51,8 +48,8 @@
                         <span class="green"></span>
                     </div>
                 </div>
-                <h2>Projet 3</h2>
-                <a href="resultat.html" class="project-button">Voir le projet</a>
+                <h2>Resultats</h2>
+                <a href="resultat.html" class="project-button">Voir</a>
             </div>
         </div>
 
