--- a/Install.html
+++ b/Install.html
@@ -146,9 +146,9 @@
 
             <!-- Liens de téléchargement -->
             <div class="download-buttons">
-                <a href="downloads/Mario Kart Wii (USA) (En,Fr,Es).rvz" class="project-button" download>Télécharger la
+                <a href="https://drive.google.com/file/d/1C9Y-6-vo1rvDQhxQ0kFZtojZTDVyDmbo/view?usp=sharing" class="project-button" download>Télécharger la
                     ROM</a>
-                <a href="downloads/WheelWizard.exe" class="project-button" download>Télécharger le Launcher</a>
+                <a href="https://drive.google.com/file/d/10viN2No4zy07W3OXmrUypalkYjgidIjq/view?usp=drive_link" class="project-button" download>Télécharger le Launcher</a>
                 <a href="https://fr.dolphin-emu.org/" class="project-button" target="_blank">Accéder à Dolphin</a>
             </div>
         </div>
